fix ui shift

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -2,3 +2,8 @@
 #__nuxt > div > header > div > div.section.right > button {
   display: none;
 }
+
+/* forcefully set max-width as pinceau is causing layout shift */
+.page-layout .container {
+  @apply xl:!max-w-screen-xl;
+}
